[package]
name = "vk-compute"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.17.0"
vulkano-shaders = "0.17.0"
simple-error = "0.2.1"
